fix(go): centre-align text in score panel

--- a/kaggle_environments/envs/open_spiel_env/games/go/visualizer/v2/src/components/ScorePanel.module.css
+++ b/kaggle_environments/envs/open_spiel_env/games/go/visualizer/v2/src/components/ScorePanel.module.css
@@ -21,6 +21,7 @@
   margin-inline: 6em;
   padding: 0.5em;
   line-height: 1.5;
+  text-align: center;
 }
 
 .tableWrapper table {
